# 386MAX

./: BLDSRV.BAT  BLDSRV2.BAT  CYA.MAK  DSMGR.FIX  E  LIBOUT.DOC  MAKEIT.BAT  MAX.FIX  MAX.MAK  MAX801.FIX  MEM_SCRN.INC  MEM_UIN.MAC  MEM_USF.MAC  MKRM.BAT  MKRT.BAT  NEWPROJ.BAT  PCTSR.ARF  PCTSR.ASM  PCTSR.TXT  PVCS.CFG  QE.BAT  QM.INP  QMAX@BLB.OEM  QMAX@REB.OEM  QMAXDPMI.INC  QMAX_A20.INC  QMAX_BSM.ASM  QMAX_CFG.INC  QMAX_CM2.INC  QMAX_CM3.INC  QMAX_CM4.INC  QMAX_CPD.INC  QMAX_CPQ.INC  QMAX_D10.ASM  QMAX_D15.ASM  QMAX_D21.ASM  QMAX_DB2.INC  QMAX_DB3.INC  QMAX_DBG.ASM  QMAX_DBG.INC  (+81 more)
386DISK/: DISKDEP.INC  DOS7.DOC  MAKEFILE  NAMETWT.DOC  PVCS.CFG  QDISK.ASM  QDISK.INC  QDISK_IN.ASM  QDSK@BLU.OEM  QDSK_COM.INC  QDSK_OEM.ASM  UDBIN2.BAT  UDLOCAL2.BAT  VERSION.ASM
386LOAD/: 386LOAD.DOC  3L_DRVSP.DOC  COMM_OEM.INC  DRVCOM.ASM  DRVLOAD.ASM  DRV_MSGS.ASM  GETSIZE.ASM  LOAD@BET.OEM  LOAD@BLB.OEM  LOAD@BLU.OEM  LOAD@REB.OEM  LOADCO2.ASM  LOADCOM.ASM  LOADDEP.INC  LOADMSGS.ASM  LOAD_LC2.INC  LOAD_LCL.INC  LOAD_OEM.ALL  LOAD_OPT.INC  LOAD_RES.INC  LSEG.ASM  MACFNS.ASM  MAKEFILE  MAPLOAD.ASM  PVCS.CFG  TSRCOM.ASM  TSRHIGH.ASM  TSRLOAD.ASM  TSR_MSGS.ASM  UDBIN2.BAT  UDLOCAL2.BAT  (+2 more)
TESTS/TESTDPMI/grep/gnu/grep-2.1/: AUTHORS  ChangeLog  Makefile  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.h  config.h-in  configure  configure.in
TESTS/TESTDPMI/grep/gnu/grep-2.1/djgpp/: README  config.bat  main.mak  src.mak  tests.mak
TESTS/TESTDPMI/grep/gnu/grep-2.1/po/: cat-id-tbl.c  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  grep.pot  ko.gmo  ko.po  nl.gmo  nl.po  no.gmo  no.po  pl.gmo  pl.po  sl.gmo  sl.po  sv.gmo  sv.po
TESTS/TESTDPMI/grep/gnu/grep-2.1/src/: Makefile  Makefile.in  dfa.c  dfa.h  getopt1.c  grep.1  grep.c  grep.h  kwset.c  kwset.h  obstack.c  obstack.h  search.c  system.h
TESTS/TESTDPMI/grep/gnu/grep-2.1/tests/: Makefile  Makefile.am  Makefile.in  khadafy.lines  spencer2.tests
(+2431 files in other folders)
